Updated the id to something more specific

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <button onclick="myFunction()">Try it</button>
 
-    <p id="demo"></p>
+    <p id="bingo-number"></p>
 
 <script type="text/javascript" src="js/bingo-game.js"></script>
 
