--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bingo Random Number Generator</title>
+    <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
 
-    <p>Click the button to display a random number between 1 and 90.</p>
+    <div class="container">
+        <h1 id="text-align--center">Click the button to play the game!</h1>
+    </div>
 
     <button onclick="myFunction()">Try it</button>
 
