Adjusted the structure of the page a little

--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 </head>
 <body>
 
-    <div class="container">
-        <h1 id="text-align--center">Click the button to play the game!</h1>
+    <div class="container" id="text-align--center">
+        <h1>Click the button to play the game!</h1>
+        <div id="bingo-number"></div>
+        <button onclick="myFunction()">Try it</button>
     </div>
-
-    <button onclick="myFunction()">Try it</button>
-
-    <p id="bingo-number"></p>
 
 <script type="text/javascript" src="js/bingo-game.js"></script>
 
