--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bingo Random Number Generator</title>
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 </head>
 <body>
 
     <div class="container" id="text-align--center">
-        <h1>Click the button to play the game!</h1>
-        <div id="bingo-number"></div>
-        <button onclick="myFunction()">Try it</button>
+        <div class="game-container">
+            <h1>Let's play a game!</h1>
+            <div id="bingo-number"></div>
+            <button onclick="myFunction()">Try it</button>
+            <button class="text--btn" onClick="document.location.reload(true)"><i class="las la-redo-alt"></i> Reset game</button>
+        </div>
     </div>
 
 <script type="text/javascript" src="js/bingo-game.js"></script>
